--- a/style.css
+++ b/style.css
@@ -18,10 +18,13 @@ body
     background-color: white;
     padding: 10px;
     border: 1px solid #aaaaaa;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 
 #content
 {
+    padding: 15px;
     border: none;
     font-size: 14px;
     float: right;
