--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>{{ page.title }}</title>
-<link rel="stylesheet" type="text/css" href="style.css" media="screen"> 
+<link rel="stylesheet" type="text/css" href="css/style.css" media="screen"> 
 </head>
 
 <body>
