--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,20 +1,35 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>{{ page.title }}</title>
-<link rel="stylesheet" type="text/css" href="css/style.css" media="screen"> 
-</head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>{{ page.title }}</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    {% include bootstrap.js.html %}
 
-<body>
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
 
-<div id="content-wrapper">
-  <img src="logo.jpg" height="270" width="254" id="logo"/>
 
-  <div id="content">
-  {{ content }}
-  </div>
-</div>
+  </head>
+
+  <body>
+
+    <div id="page">
+      {% include navbar.html %}
+
+      <div id="content-wrapper">
+        <div class="container-fluid">
+          <div class="row-fluid">
+            <div class="span2">
+              {% include sidebar.html %}
+            </div>
+
+            <div class="span9" id="main-content">
+              {{ content }}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 </body>
 </html>
