Minor presentation changes

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,11 @@
         <i class="icon-share"></i>&nbsp;Meetup&nbsp;page
       </a>
     </li>
+    <li>
+      <a class="sidebar-link" href="mailto:contact@scala-phase.org">
+        <i class="icon-envelope"></i>&nbsp;Contact&nbsp;us
+      </a>
+    </li>
   </ul>
 </div>
 
