Initial redesign, incorporating single page design, smooth scrolling, Gridism (for responsive layout), and updated content.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 
 <div id="sidebar" class="well">
-  <span><img src="/logo.jpg" class="logo"></span>
+  <span><img src="logo.jpg" class="logo"></span>
   <ul>
     <li><a class="sidebar-link" id="sidebar-home" href="/">
       <i class="icon-home"></i>&nbsp;Home</a>
