--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,14 +1,23 @@
 <!-- Twitter Bootstrap navbar -->
 
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-
-      <a class="brand" href="/">
-        <span id="banner-image"><img src="/logo.jpg" class="logo"></span>
-        <span id="company-name">PHASE: Philly Area Scala Enthusiasts.</span>
-      </a>
-
+<div id="top-section">
+  <div class="grid">
+    <div class="navbar">
+      <div class="unit whole center">
+        <div class="banner">
+          <span class="banner-image"><img src="logo.jpg" class="logo"></span>
+  
+          <span class="title">PHASE: Philly Area Scala Enthusiasts</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="grid">
+    <div class="unit whole">
+      <div class="navlinks">
+        <a href="#talks" class="btn navlink">#Talks</a>
+      </div>
     </div>
   </div>
 </div>
