Added Martin Snyder talk.

--- a/_templates/talks.mustache
+++ b/_templates/talks.mustache
@@ -9,7 +9,7 @@
       <th>Date</th>
       <th>Speaker</th>
       <th>Title</th>
-      <th>Meetup Event Page</th>
+      <th>Meeting Page</th>
       <th>Slides</th>
       <th>Code</th>
       <th>Other</th>
@@ -23,7 +23,7 @@
         <td class="date">{{date}}</td>
         <td class="speaker">{{speaker}}</td>
         <td class="title">{{title}}</td>
-        <td class="meetup-link"><a href="{{meetup}}">{{meetup_id}}</a></td>
+        <td class="meetup-link"><a href="{{meeting_link}}">{{meeting_id}}</a></td>
         <td class="slides">
           {{#slides}}
             <a class="slides-link" href="{{slides.link}}">Slides</a>
