--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -9,7 +9,7 @@
       <th>Date</th>
       <th>Speaker</th>
       <th>Title</th>
-      <th>Meetup Event Page</th>
+      <th>Meeting Page</th>
       <th>Slides</th>
       <th>Code</th>
       <th>Other</th>
@@ -21,7 +21,7 @@
         <td class="date">2014-07-24</td>
         <td class="speaker">Brad Miller</td>
         <td class="title">The Scala-Graph Library</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179613752/">179613752</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179613752/">www.meetup.com/scala-phase/events/179613752/</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -33,7 +33,7 @@
         <td class="date">2014-06-12</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Haskell and React.js</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179229002/">179229002</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179229002/">www.meetup.com/scala-phase/events/179229002/</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -46,7 +46,7 @@
         <td class="date">2014-05-20</td>
         <td class="speaker">Dustin Getz &amp; Daniel Miladinov</td>
         <td class="title">React.js and functional Javascript</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167318632/">167318632</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167318632/">www.meetup.com/scala-phase/events/167318632/</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -58,7 +58,7 @@
         <td class="date">2014-04-24</td>
         <td class="speaker">Roland Kuhn</td>
         <td class="title">Roland Kuhn leads a Q&amp;A and live coding session</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166802/">167166802</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166802/">www.meetup.com/scala-phase/events/167166802/</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -70,7 +70,7 @@
         <td class="date">2014-03-20</td>
         <td class="speaker">Gary Keorkunian</td>
         <td class="title">Viridity&#39;s Scala Units of Measure and Quantities API</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166322/">167166322</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166322/">www.meetup.com/scala-phase/events/167166322/</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.squants.com/squants-phase-mar2014.pdf">Slides</a>
               <span class="slides-comment">(PDF)</span>
@@ -82,24 +82,26 @@
         </td>
       </tr>
       <tr>
-        <td class="date">2013-07-09</td>
-        <td class="speaker">Jason Feingold</td>
-        <td class="title">Gradle</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/125411192/">125411192</a></td>
+        <td class="date">2013-09-25</td>
+        <td class="speaker">Martin Snyder</td>
+        <td class="title">Writing Functional Wrappers for Legacy APIs (joint meeting of PHASE and PhillyJUG)</td>
+        <td class="meetup-link"><a href="http://phillyjug.com/2013/09/25/wrappers/">phillyjug.com/2013/09/25/wrappers/</a></td>
         <td class="slides">
-            <a class="slides-link" href="talks/jason-feingold-gradle/">Slides</a>
+            <a class="slides-link" href="https://rawgithub.com/MartinSnyder/scala-jdbc/master/presentation/index.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
         </td>
         <td class="code">
+            <a class="code-link" href="https://github.com/MartinSnyder/scala-jdbc">https://github.com/MartinSnyder/scala-jdbc</a>
         </td>
         <td class="other">
+            <a class="video-link" href="http://vimeo.com/75591447">Video</a>
         </td>
       </tr>
       <tr>
         <td class="date">2013-07-09</td>
         <td class="speaker">Mads Hartmann Jenson</td>
         <td class="title">Building SBT Plugins</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/47857352">47857352</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/47857352">www.meetup.com/scala-phase/events/47857352</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/mads-sbt-plugins.pdf">Slides</a>
               <span class="slides-comment">(PDF)</span>
@@ -114,7 +116,7 @@
         <td class="date">2013-04-16</td>
         <td class="speaker">Dmitriy Setrakyan</td>
         <td class="title">Pearls of Distributed Programming with Scala and GridGain</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/112878592/">112878592</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/112878592/">www.meetup.com/scala-phase/events/112878592/</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -126,7 +128,7 @@
         <td class="date">2012-12-04</td>
         <td class="speaker">Duncan Devore</td>
         <td class="title">CQRS and Event Sourcing</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/88673682/">88673682</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/88673682/">www.meetup.com/scala-phase/events/88673682/</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/duncan-devore-cqrs/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -140,7 +142,7 @@
         <td class="date">2012-10-02</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">The Play! Framework</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/82990972/">82990972</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/82990972/">www.meetup.com/scala-phase/events/82990972/</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.ardentex.com/publications/the-play-framework/slides.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -154,7 +156,7 @@
         <td class="date">2011-11-15</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scala on the Android Platform</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/39391912/">39391912</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/39391912/">www.meetup.com/scala-phase/events/39391912/</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -167,7 +169,7 @@
         <td class="date">2011-09-20</td>
         <td class="speaker">Erik Osheim</td>
         <td class="title">Scala Type Classes</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">31595792</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">www.meetup.com/scala-phase/events/31595792/</a></td>
         <td class="slides">
             <a class="slides-link" href="http://plastic-idolatry.com/typcls/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -181,7 +183,7 @@
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">31595792</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">www.meetup.com/scala-phase/events/31595792/</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/jamie-allen-sdisruptor/index.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
