--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="third-party/css/normalize.css"/>
     <script src="third-party/js/animatedScrollTo.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css" media="screen">
     <script src="js/main.js" type="text/javascript"></script>
   </head>
 
