Added more missing talks. Fixed link to Disruptors talk Meetup page.

--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -99,15 +99,14 @@
       </tr>
       <tr>
         <td class="date">2013-07-09</td>
-        <td class="speaker">Mads Hartmann Jenson</td>
-        <td class="title">Building SBT Plugins</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/47857352">www.meetup.com/scala-phase/events/47857352</a></td>
+        <td class="speaker">Jason Feingold</td>
+        <td class="title">Gradle and Scala</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/125411192/">www.meetup.com/scala-phase/events/125411192/</a></td>
         <td class="slides">
-            <a class="slides-link" href="talks/mads-sbt-plugins.pdf">Slides</a>
-              <span class="slides-comment">(PDF)</span>
+            <a class="slides-link" href="http://scala-phase.org/talks/jason-feingold-gradle/">Slides</a>
+              <span class="slides-comment">(HTML + Javascript)</span>
         </td>
         <td class="code">
-            <a class="code-link" href="https://github.com/mads379/sbt-plugin-examples">https://github.com/mads379/sbt-plugin-examples</a>
         </td>
         <td class="other">
         </td>
@@ -139,6 +138,20 @@
         </td>
       </tr>
       <tr>
+        <td class="date">2012-10-23</td>
+        <td class="speaker">Nick McAvoy</td>
+        <td class="title">Typesafe Slick</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/85382662/">www.meetup.com/scala-phase/events/85382662/</a></td>
+        <td class="slides">
+            <a class="slides-link" href="http://ohbadiah.github.io/phase_slick/">Slides</a>
+              <span class="slides-comment">(HTML + Javascript)</span>
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr>
         <td class="date">2012-10-02</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">The Play! Framework</td>
@@ -148,6 +161,45 @@
               <span class="slides-comment">(HTML + Javascript)</span>
         </td>
         <td class="code">
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr>
+        <td class="date">2012-06-12</td>
+        <td class="speaker">Yuvi Masory</td>
+        <td class="title">Scalaz, Monads, Functors and You</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/63156772/">www.meetup.com/scala-phase/events/63156772/</a></td>
+        <td class="slides">
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr>
+        <td class="date">2012-05-15</td>
+        <td class="speaker">Adam Hinz and George Adams</td>
+        <td class="title">Dispatch, Unfiltered, Blue Eyes and Play: A Comparison</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/60768832/">www.meetup.com/scala-phase/events/60768832/</a></td>
+        <td class="slides">
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr>
+        <td class="date">2012-01-26</td>
+        <td class="speaker">Mads Hartmann Jenson</td>
+        <td class="title">Building SBT Plugins</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/47857352">www.meetup.com/scala-phase/events/47857352</a></td>
+        <td class="slides">
+            <a class="slides-link" href="talks/mads-sbt-plugins.pdf">Slides</a>
+              <span class="slides-comment">(PDF)</span>
+        </td>
+        <td class="code">
+            <a class="code-link" href="https://github.com/mads379/sbt-plugin-examples">https://github.com/mads379/sbt-plugin-examples</a>
         </td>
         <td class="other">
         </td>
@@ -163,6 +215,20 @@
         </td>
         <td class="other">
             <a class="video-link" href="http://vimeo.com/32516782">Video</a>
+        </td>
+      </tr>
+      <tr>
+        <td class="date">2011-10-18</td>
+        <td class="speaker">Brian Clapper</td>
+        <td class="title">SBT 0.10 and 0.11 Overview</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/35297532/">www.meetup.com/scala-phase/events/35297532/</a></td>
+        <td class="slides">
+            <a class="slides-link" href="http://www.ardentex.com/publications/intro-sbt/slides.html">Slides</a>
+              <span class="slides-comment">(HTML + Javascript)</span>
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
         </td>
       </tr>
       <tr>
@@ -183,7 +249,7 @@
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">www.meetup.com/scala-phase/events/31595792/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/26666971/">www.meetup.com/scala-phase/events/26666971/</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/jamie-allen-sdisruptor/index.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
