Run Rake first, dumbass...

--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -171,6 +171,8 @@
         <td class="title">Scalaz, Monads, Functors and You</td>
         <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/63156772/">www.meetup.com/scala-phase/events/63156772/</a></td>
         <td class="slides">
+            <a class="slides-link" href="talks/yuvi-masory-scalaz.pdf">Slides</a>
+              <span class="slides-comment">(PDF)</span>
         </td>
         <td class="code">
         </td>
