--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 
 <p>The Philly Area Scala Enthusiasts (PHASE) is a user group for people in the
 Philadelphia, PA, region who are interested in the
-<a href="http://www.scala-lang.org/">Scala</a>
+<a target="scala-lang.org" href="http://www.scala-lang.org/">Scala</a>
 programming language. If you're interested in Scala, programming on the
 Java VM, or functional programming in general, feel free to join us.</p>
 
@@ -12,12 +12,12 @@ Java VM, or functional programming in general, feel free to join us.</p>
 organizing conferences and collaborating with other Philadelphia-area
 technology users groups. PHASE is one of three regional Scala user groups
 behind the
-<a href="http://nescala.org">Northeast Scala Symposium</a>.
+<a target="nescala" href="http://nescala.org">Northeast Scala Symposium</a>.
 In past years, PHASE also organized
-<a href="http://scalathon.org/">Scalathon</a>,
+<a target="scalathon" href="http://scalathon.org/">Scalathon</a>,
 the first international Scala hackathon.</p>
 
 <p>For information about our monthly meetings, see the
-<a href="http://www.meetup.com/scala-phase">PHASE Meetup page</a>.</p>
+<a target="meetup" href="http://www.meetup.com/scala-phase">PHASE Meetup page</a>.</p>
 
 <p>We're active, and we're growing. Join us!</p>
