Updated with recent talks.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,10 +8,11 @@ Philadelphia, PA, region who are interested in the
 programming language. If you're interested in Scala, programming on the
 Java VM, or functional programming in general, feel free to join us.</p>
 
-<p>PHASE tries to meet monthly. In addition, PHASE is actively involved in
-organizing conferences and collaborating with other Philadelphia-area
-technology users groups. PHASE is one of three regional Scala user groups
-behind the
+<p>PHASE tries to meet monthly, with meeting locations alternating between
+Center City Philadelphia and the suburbs. In addition, PHASE is actively
+involved in organizing conferences and collaborating with other
+Philadelphia-area technology users groups. PHASE is one of three regional
+Scala user groups behind the
 <a target="nescala" href="http://nescala.org">Northeast Scala Symposium</a>.
 In past years, PHASE also organized
 <a target="scalathon" href="http://scalathon.org/">Scalathon</a>,
