--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -18,10 +18,50 @@
 
   <tbody>
       <tr>
+        <td class="date">2014-10-21</td>
+        <td class="speaker">Helena Edelson</td>
+        <td class="title">Escape From Hadoop: Spark Streaming, Cassandra, Scala &amp; Akka</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/200903832/">200903832</a></td>
+        <td class="slides">
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
+            <a href="javascript:void(0)"
+               class="resources-link"
+               data-resources-id="resources-0">
+              Resources
+            </a>
+        </td>
+      </tr>
+      <tr id="resources-0" style="display: none">
+        <td colspan="7">
+          <iframe src="talks/helena/resources.html" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
+      <tr>
+        <td class="date">2014-09-16</td>
+        <td class="speaker">Martin Snyder</td>
+        <td class="title">Live coding a CRUD database in Scala</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/196933482/">196933482</a></td>
+        <td class="slides">
+        </td>
+        <td class="code">
+            <a class="code-link" href="https://github.com/MartinSnyder/scala-transactional-datastore">https://github.com/MartinSnyder/scala-transactional-datastore</a>
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr id="resources-1" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
+      <tr>
         <td class="date">2014-07-24</td>
         <td class="speaker">Brad Miller</td>
         <td class="title">The Scala-Graph Library</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179613752/">www.meetup.com/scala-phase/events/179613752/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179613752/">179613752</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -29,11 +69,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-2" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2014-06-12</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Haskell and React.js</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179229002/">www.meetup.com/scala-phase/events/179229002/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179229002/">179229002</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -42,23 +87,33 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-3" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2014-05-20</td>
         <td class="speaker">Dustin Getz &amp; Daniel Miladinov</td>
         <td class="title">React.js and functional Javascript</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167318632/">www.meetup.com/scala-phase/events/167318632/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167318632/">167318632</a></td>
         <td class="slides">
         </td>
         <td class="code">
         </td>
         <td class="other">
+        </td>
+      </tr>
+      <tr id="resources-4" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
         </td>
       </tr>
       <tr>
         <td class="date">2014-04-24</td>
         <td class="speaker">Roland Kuhn</td>
         <td class="title">Roland Kuhn leads a Q&amp;A and live coding session</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166802/">www.meetup.com/scala-phase/events/167166802/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166802/">167166802</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -66,11 +121,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-5" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2014-03-20</td>
         <td class="speaker">Gary Keorkunian</td>
         <td class="title">Viridity&#39;s Scala Units of Measure and Quantities API</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166322/">www.meetup.com/scala-phase/events/167166322/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166322/">167166322</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.squants.com/squants-phase-mar2014.pdf">Slides</a>
               <span class="slides-comment">(PDF)</span>
@@ -81,11 +141,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-6" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2013-09-25</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Writing Functional Wrappers for Legacy APIs (joint meeting of PHASE and PhillyJUG)</td>
-        <td class="meetup-link"><a href="http://phillyjug.com/2013/09/25/wrappers/">phillyjug.com/2013/09/25/wrappers/</a></td>
+        <td class="meetup-link"><a href="http://phillyjug.com/2013/09/25/wrappers/">http:phillyjug.com20130925wrappers</a></td>
         <td class="slides">
             <a class="slides-link" href="https://rawgithub.com/MartinSnyder/scala-jdbc/master/presentation/index.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -97,11 +162,16 @@
             <a class="video-link" href="http://vimeo.com/75591447">Video</a>
         </td>
       </tr>
+      <tr id="resources-7" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2013-07-09</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Gradle and Scala</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/125411192/">www.meetup.com/scala-phase/events/125411192/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/125411192/">125411192</a></td>
         <td class="slides">
             <a class="slides-link" href="http://scala-phase.org/talks/jason-feingold-gradle/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -111,11 +181,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-8" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2013-04-16</td>
         <td class="speaker">Dmitriy Setrakyan</td>
         <td class="title">Pearls of Distributed Programming with Scala and GridGain</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/112878592/">www.meetup.com/scala-phase/events/112878592/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/112878592/">112878592</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -123,11 +198,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-9" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2012-12-04</td>
         <td class="speaker">Duncan Devore</td>
         <td class="title">CQRS and Event Sourcing</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/88673682/">www.meetup.com/scala-phase/events/88673682/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/88673682/">88673682</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/duncan-devore-cqrs/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -137,11 +217,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-10" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2012-10-23</td>
         <td class="speaker">Nick McAvoy</td>
         <td class="title">Typesafe Slick</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/85382662/">www.meetup.com/scala-phase/events/85382662/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/85382662/">85382662</a></td>
         <td class="slides">
             <a class="slides-link" href="http://ohbadiah.github.io/phase_slick/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -151,11 +236,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-11" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2012-10-02</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">The Play! Framework</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/82990972/">www.meetup.com/scala-phase/events/82990972/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/82990972/">82990972</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.ardentex.com/publications/the-play-framework/slides.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -165,11 +255,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-12" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2012-06-12</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scalaz, Monads, Functors and You</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/63156772/">www.meetup.com/scala-phase/events/63156772/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/63156772/">63156772</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/yuvi-masory-scalaz.pdf">Slides</a>
               <span class="slides-comment">(PDF)</span>
@@ -179,11 +274,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-13" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2012-05-15</td>
         <td class="speaker">Adam Hinz and George Adams</td>
         <td class="title">Dispatch, Unfiltered, Blue Eyes and Play: A Comparison</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/60768832/">www.meetup.com/scala-phase/events/60768832/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/60768832/">60768832</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -191,11 +291,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-14" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2012-01-26</td>
         <td class="speaker">Mads Hartmann Jenson</td>
         <td class="title">Building SBT Plugins</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/47857352">www.meetup.com/scala-phase/events/47857352</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/47857352">47857352</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/mads-sbt-plugins.pdf">Slides</a>
               <span class="slides-comment">(PDF)</span>
@@ -206,11 +311,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-15" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2011-11-15</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scala on the Android Platform</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/39391912/">www.meetup.com/scala-phase/events/39391912/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/39391912/">39391912</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -219,11 +329,16 @@
             <a class="video-link" href="http://vimeo.com/32516782">Video</a>
         </td>
       </tr>
+      <tr id="resources-16" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2011-10-18</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">SBT 0.10 and 0.11 Overview</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/35297532/">www.meetup.com/scala-phase/events/35297532/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/35297532/">35297532</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.ardentex.com/publications/intro-sbt/slides.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -233,11 +348,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-17" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2011-09-20</td>
         <td class="speaker">Erik Osheim</td>
         <td class="title">Scala Type Classes</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">www.meetup.com/scala-phase/events/31595792/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">31595792</a></td>
         <td class="slides">
             <a class="slides-link" href="http://plastic-idolatry.com/typcls/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -247,11 +367,16 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-18" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
       <tr>
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/26666971/">www.meetup.com/scala-phase/events/26666971/</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/26666971/">26666971</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/jamie-allen-sdisruptor/index.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -262,5 +387,12 @@
         <td class="other">
         </td>
       </tr>
+      <tr id="resources-19" style="display: none">
+        <td colspan="7">
+          <iframe src="" width="100%" height="100%"></iframe>
+        </td>
+      </tr>
   </tbody>
-</table
+</table>
+
+<div id="dialog"></div>
