Added slides for Brad's Scala Graph talk.

--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -63,6 +63,8 @@
         <td class="title">The Scala-Graph Library</td>
         <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179613752/">179613752</a></td>
         <td class="slides">
+            <a class="slides-link" href="talks/brad-miller-scala-graph.pdf">Slides</a>
+              <span class="slides-comment">(HTML)</span>
         </td>
         <td class="code">
         </td>
