--- a/less/style.less
+++ b/less/style.less
@@ -75,6 +75,14 @@ a {
   padding-bottom: 20px;
 }
 
+.resources-link {
+  white-space: nowrap;
+
+  .pointer {
+    font-size: @baseFontSize - 4px;
+  }
+}
+
 @import "_navbar.less";
 
 /*
