--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -21,16 +21,17 @@
         <td class="date">2014-10-21</td>
         <td class="speaker">Helena Edelson</td>
         <td class="title">Escape From Hadoop: Spark Streaming, Cassandra, Scala &amp; Akka</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/200903832/">200903832</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/200903832/">meetup.com/.../200903832</a></td>
         <td class="slides">
         </td>
         <td class="code">
         </td>
         <td class="other">
-            <a href="javascript:void(0)"
-               class="resources-link"
-               data-resources-id="resources-0">
+            <a href="javascript:void(0)" class="resources-link"
+               data-state="closed" data-resources-id="resources-0">
               Resources
+              <span class="pointer pointer-closed fa fa-caret-right"></span>
+              <span class="pointer pointer-open fa fa-caret-down" style="display: none"></span>
             </a>
         </td>
       </tr>
@@ -43,11 +44,11 @@
         <td class="date">2014-09-16</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Live coding a CRUD database in Scala</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/196933482/">196933482</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/196933482/">meetup.com/.../196933482</a></td>
         <td class="slides">
         </td>
         <td class="code">
-            <a class="code-link" href="https://github.com/MartinSnyder/scala-transactional-datastore">https://github.com/MartinSnyder/scala-transactional-datastore</a>
+            <a class="code-link" href="https://github.com/MartinSnyder/scala-transactional-datastore">github.com/MartinSnyder/scala-transactional-datastore</a>
         </td>
         <td class="other">
         </td>
@@ -61,10 +62,10 @@
         <td class="date">2014-07-24</td>
         <td class="speaker">Brad Miller</td>
         <td class="title">The Scala-Graph Library</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179613752/">179613752</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179613752/">meetup.com/.../179613752</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/brad-miller-scala-graph.pdf">Slides</a>
-              <span class="slides-comment">(HTML)</span>
+              <span class="slides-comment">(PDF)</span>
         </td>
         <td class="code">
         </td>
@@ -80,11 +81,11 @@
         <td class="date">2014-06-12</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Haskell and React.js</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179229002/">179229002</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/179229002/">meetup.com/.../179229002</a></td>
         <td class="slides">
         </td>
         <td class="code">
-            <a class="code-link" href="https://github.com/wafna/">https://github.com/wafna/</a>
+            <a class="code-link" href="https://github.com/wafna/">github.com/wafna/</a>
         </td>
         <td class="other">
         </td>
@@ -98,7 +99,7 @@
         <td class="date">2014-05-20</td>
         <td class="speaker">Dustin Getz &amp; Daniel Miladinov</td>
         <td class="title">React.js and functional Javascript</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167318632/">167318632</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167318632/">meetup.com/.../167318632</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -115,7 +116,7 @@
         <td class="date">2014-04-24</td>
         <td class="speaker">Roland Kuhn</td>
         <td class="title">Roland Kuhn leads a Q&amp;A and live coding session</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166802/">167166802</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166802/">meetup.com/.../167166802</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -132,13 +133,13 @@
         <td class="date">2014-03-20</td>
         <td class="speaker">Gary Keorkunian</td>
         <td class="title">Viridity&#39;s Scala Units of Measure and Quantities API</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166322/">167166322</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167166322/">meetup.com/.../167166322</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.squants.com/squants-phase-mar2014.pdf">Slides</a>
               <span class="slides-comment">(PDF)</span>
         </td>
         <td class="code">
-            <a class="code-link" href="http://www.squants.com/">http://www.squants.com/</a>
+            <a class="code-link" href="http://www.squants.com/">www.squants.com/</a>
         </td>
         <td class="other">
         </td>
@@ -152,13 +153,13 @@
         <td class="date">2013-09-25</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Writing Functional Wrappers for Legacy APIs (joint meeting of PHASE and PhillyJUG)</td>
-        <td class="meetup-link"><a href="http://phillyjug.com/2013/09/25/wrappers/">http:phillyjug.com20130925wrappers</a></td>
+        <td class="meetup-link"><a href="http://phillyjug.com/2013/09/25/wrappers/">phillyjug.com/2013/09/25/wrappers/</a></td>
         <td class="slides">
             <a class="slides-link" href="https://rawgithub.com/MartinSnyder/scala-jdbc/master/presentation/index.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
         </td>
         <td class="code">
-            <a class="code-link" href="https://github.com/MartinSnyder/scala-jdbc">https://github.com/MartinSnyder/scala-jdbc</a>
+            <a class="code-link" href="https://github.com/MartinSnyder/scala-jdbc">github.com/MartinSnyder/scala-jdbc</a>
         </td>
         <td class="other">
             <a class="video-link" href="http://vimeo.com/75591447">Video</a>
@@ -173,7 +174,7 @@
         <td class="date">2013-07-09</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Gradle and Scala</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/125411192/">125411192</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/125411192/">meetup.com/.../125411192</a></td>
         <td class="slides">
             <a class="slides-link" href="http://scala-phase.org/talks/jason-feingold-gradle/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -192,7 +193,7 @@
         <td class="date">2013-04-16</td>
         <td class="speaker">Dmitriy Setrakyan</td>
         <td class="title">Pearls of Distributed Programming with Scala and GridGain</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/112878592/">112878592</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/112878592/">meetup.com/.../112878592</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -209,7 +210,7 @@
         <td class="date">2012-12-04</td>
         <td class="speaker">Duncan Devore</td>
         <td class="title">CQRS and Event Sourcing</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/88673682/">88673682</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/88673682/">meetup.com/.../88673682</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/duncan-devore-cqrs/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -228,7 +229,7 @@
         <td class="date">2012-10-23</td>
         <td class="speaker">Nick McAvoy</td>
         <td class="title">Typesafe Slick</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/85382662/">85382662</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/85382662/">meetup.com/.../85382662</a></td>
         <td class="slides">
             <a class="slides-link" href="http://ohbadiah.github.io/phase_slick/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -247,7 +248,7 @@
         <td class="date">2012-10-02</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">The Play! Framework</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/82990972/">82990972</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/82990972/">meetup.com/.../82990972</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.ardentex.com/publications/the-play-framework/slides.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -266,7 +267,7 @@
         <td class="date">2012-06-12</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scalaz, Monads, Functors and You</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/63156772/">63156772</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/63156772/">meetup.com/.../63156772</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/yuvi-masory-scalaz.pdf">Slides</a>
               <span class="slides-comment">(PDF)</span>
@@ -285,7 +286,7 @@
         <td class="date">2012-05-15</td>
         <td class="speaker">Adam Hinz and George Adams</td>
         <td class="title">Dispatch, Unfiltered, Blue Eyes and Play: A Comparison</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/60768832/">60768832</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/60768832/">meetup.com/.../60768832</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -302,13 +303,13 @@
         <td class="date">2012-01-26</td>
         <td class="speaker">Mads Hartmann Jenson</td>
         <td class="title">Building SBT Plugins</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/47857352">47857352</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/47857352">www.meetup.com/scala-phase/events/47857352</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/mads-sbt-plugins.pdf">Slides</a>
               <span class="slides-comment">(PDF)</span>
         </td>
         <td class="code">
-            <a class="code-link" href="https://github.com/mads379/sbt-plugin-examples">https://github.com/mads379/sbt-plugin-examples</a>
+            <a class="code-link" href="https://github.com/mads379/sbt-plugin-examples">github.com/mads379/sbt-plugin-examples</a>
         </td>
         <td class="other">
         </td>
@@ -322,7 +323,7 @@
         <td class="date">2011-11-15</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scala on the Android Platform</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/39391912/">39391912</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/39391912/">meetup.com/.../39391912</a></td>
         <td class="slides">
         </td>
         <td class="code">
@@ -340,7 +341,7 @@
         <td class="date">2011-10-18</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">SBT 0.10 and 0.11 Overview</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/35297532/">35297532</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/35297532/">meetup.com/.../35297532</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.ardentex.com/publications/intro-sbt/slides.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -359,7 +360,7 @@
         <td class="date">2011-09-20</td>
         <td class="speaker">Erik Osheim</td>
         <td class="title">Scala Type Classes</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">31595792</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">meetup.com/.../31595792</a></td>
         <td class="slides">
             <a class="slides-link" href="http://plastic-idolatry.com/typcls/">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
@@ -378,13 +379,13 @@
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/26666971/">26666971</a></td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/26666971/">meetup.com/.../26666971</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/jamie-allen-sdisruptor/index.html">Slides</a>
               <span class="slides-comment">(HTML + Javascript)</span>
         </td>
         <td class="code">
-            <a class="code-link" href="https://github.com/jamie-allen/sdisruptor">https://github.com/jamie-allen/sdisruptor</a>
+            <a class="code-link" href="https://github.com/jamie-allen/sdisruptor">github.com/jamie-allen/sdisruptor</a>
         </td>
         <td class="other">
         </td>
