Added link to Helena's slides

--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -23,6 +23,8 @@
         <td class="title">Escape From Hadoop: Spark Streaming, Cassandra, Scala &amp; Akka</td>
         <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/200903832/">meetup.com/.../200903832</a></td>
         <td class="slides">
+            <a class="slides-link" href="http://www.slideshare.net/HelenaEdelsonGram/escape-from-hadoop-with-apache-spark-and-cassandra">Slides</a>
+              <span class="slides-comment">(Slideshare)</span>
         </td>
         <td class="code">
         </td>
